--- a/myproject/offers_coupons/templates/offers_coupons/coupon.html
+++ b/myproject/offers_coupons/templates/offers_coupons/coupon.html
@@ -379,7 +379,7 @@
                         <i class="bi bi-house-door-fill"></i>
                         <span>home</span>
                     </a>
-                    <a href="#" class="nav-item">
+                    <a href="{% url 'reports:admin_dashboard' %}" class="nav-item">
                         <i class="bi bi-bar-chart-fill"></i>
                         <span>Dashboard</span>
                     </a>
@@ -395,15 +395,16 @@
                         <i class="bi bi-bag-fill"></i>
                         <span>Products</span>
                     </a>
-                    <a href="#" class="nav-item">
+                    <a href="{% url 'offers_coupons:coupon'%}" class="nav-item">
                         <i class="bi bi-credit-card-fill"></i>
                         <span>Coupons</span>
                     </a>
-                    <a href="#" class="nav-item">
-                        <i class="bi bi-gift-fill"></i>
-                        <span>Offers</span>
+                     
+                    <a href="{% url 'products:catogery' %}" class="nav-item">
+                        <i class="bi bi-grid-fill"></i>
+                        <span>Categories</span>
                     </a>
-                    <a href="#" class="nav-item">
+                    <a href="{% url 'products:Type' %}" class="nav-item">
                         <i class="bi bi-grid-fill"></i>
                         <span>Categories</span>
                     </a>
