--- a/myproject/order/templates/order/order_admin.html
+++ b/myproject/order/templates/order/order_admin.html
@@ -358,7 +358,7 @@
                         <i class="bi bi-people-fill"></i>
                         <span>Customers</span>
                     </a>
-                    <a href="{% url 'orders:order' %}" class="nav-item">
+                    <a href="{% url 'order:orders' %}" class="nav-item">
                         <i class="bi bi-cart-fill"></i>
                         <span>Orders</span>
                     </a>
