--- a/myproject/reports/templates/reports/dashboard.html
+++ b/myproject/reports/templates/reports/dashboard.html
@@ -367,15 +367,16 @@
                 <i class="bi bi-credit-card-fill"></i>
                 <span>Coupons</span>
             </a>
-            <a href="#" class="nav-item">
-                <i class="bi bi-gift-fill"></i>
-                <span>Offers</span>
-            </a>
-            <a href="#" class="nav-item">
+             
+            <a href="" class="nav-item">
                 <i class="bi bi-grid-fill"></i>
                 <span>Categories</span>
             </a>
-            <a href="#" class="nav-item">
+            <a href="{% url 'products:Type'%}" class="nav-item">
+                <i class="bi bi-grid-fill"></i>
+                <span>Categories</span>
+            </a>
+            <a href="{% url 'reports:sales_report'%}" class="nav-item">
                 <i class="bi bi-file-earmark-text"></i>
                 <span>Report</span>
             </a>
