--- a/myproject/reports/templates/reports/report.html
+++ b/myproject/reports/templates/reports/report.html
@@ -241,7 +241,7 @@
                 <i class="bi bi-grid-fill"></i>
                 <span>Type</span>
             </a>
-            <a href="{% url 'reports:reports'%}" class="nav-item">
+            <a href="{% url 'reports:sales_report'%}" class="nav-item">
                 <i class="bi bi-file-earmark-text"></i>
                 <span>Report</span>
             </a>
