--- a/myproject/products/templates/products/home.html
+++ b/myproject/products/templates/products/home.html
@@ -1,7 +1,7 @@
  <!DOCTYPE html>
 <html lang="en">
 <head>
-	<title>Home 03</title>
+	<title>nanoride</title>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
  	{% load static %}
