--- a/myproject/authentication/templates/accounts/login.html
+++ b/myproject/authentication/templates/accounts/login.html
@@ -34,7 +34,7 @@
 
         .login-image {
             width: 50%;
-            background-image: url("{% static 'authentication/images/1.jpg' %}");
+            background-image: url("{% static 'images/1.jpg' %}");
             background-size: cover;
             background-position: center;
         }
