--- a/myproject/cart/templates/cart/payment.html
+++ b/myproject/cart/templates/cart/payment.html
@@ -557,7 +557,7 @@
     <div class="wrap-header-mobile">
         <!-- Logo moblie -->        
         <div class="logo-mobile">
-            <a href="index.html"><img src="{% static 'images/icons/logo-01.png' %}" alt="IMG-LOGO"></a>
+            <a href=""><img src="{% static 'images/icons/logo-01.png' %}" alt="IMG-LOGO"></a>
         </div>
 
         <!-- Icon header -->
@@ -615,7 +615,7 @@
 
         <ul class="main-menu-m">
             <li>
-                <a href="index.html">Home</a>
+                <a href="">Home</a>
                  
                 <span class="arrow-main-menu-m">
                     <i class="fa fa-angle-right" aria-hidden="true"></i>
@@ -623,7 +623,7 @@
             </li>
 
             <li>
-                <a href="product.html">Shop</a>
+                <a href="">Shop</a>
             </li>
 
             {% comment %} <li>
@@ -671,7 +671,7 @@
 	<!-- breadcrumb -->
 	<div class="container">
 		<div class="bread-crumb flex-w p-l-25 p-r-15 p-t-30 p-lr-0-lg">
-			<a href="index.html" class="stext-109 cl8 hov-cl1 trans-04">
+			<a href="" class="stext-109 cl8 hov-cl1 trans-04">
 				Home
 				<i class="fa fa-angle-right m-l-9 m-r-10" aria-hidden="true"></i>
 			</a>
