--- a/myproject/products/templates/products/product_detail.html
+++ b/myproject/products/templates/products/product_detail.html
@@ -394,7 +394,7 @@
 <div class="wrap-header-mobile">
     <!-- Logo mobile -->        
     <div class="logo-mobile">
-        <a href="index.html"><img src="{% static 'images/icons/logo-01.png' %}" alt="IMG-LOGO"></a>
+        <a href=""><img src="{% static 'images/icons/logo-01.png' %}" alt="IMG-LOGO"></a>
     </div>
 
     <!-- Icon header -->
@@ -460,7 +460,7 @@
         </li>
 
         <li>
-            <a href="product.html">Shop</a>
+            <a href="">Shop</a>
         </li>
 
         {% comment %} <li>
@@ -795,7 +795,7 @@
 
         <div class="block2-txt flex-w flex-t p-t-14">
             <div class="block2-txt-child1 flex-col-l">
-                <a href="product-detail.html" class="stext-104 cl4 hov-cl1 trans-04 js-name-b2 p-b-6">
+                <a href="" class="stext-104 cl4 hov-cl1 trans-04 js-name-b2 p-b-6">
                     Esprit Ruffle Shirt
                 </a>
 
@@ -830,7 +830,7 @@
 
         <div class="block2-txt flex-w flex-t p-t-14">
             <div class="block2-txt-child1 flex-col-l">
-                <a href="product-detail.html" class="stext-104 cl4 hov-cl1 trans-04 js-name-b2 p-b-6">
+                <a href="" class="stext-104 cl4 hov-cl1 trans-04 js-name-b2 p-b-6">
                     Herschel Supply
                 </a>
 
@@ -866,7 +866,7 @@
 
         <div class="block2-txt flex-w flex-t p-t-14">
             <div class="block2-txt-child1 flex-col-l">
-                <a href="product-detail.html" class="stext-104 cl4 hov-cl1 trans-04 js-name-b2 p-b-6">
+                <a href="" class="stext-104 cl4 hov-cl1 trans-04 js-name-b2 p-b-6">
                     Only Check Trouser
                 </a>
 
@@ -901,7 +901,7 @@
 
         <div class="block2-txt flex-w flex-t p-t-14">
             <div class="block2-txt-child1 flex-col-l">
-                <a href="product-detail.html" class="stext-104 cl4 hov-cl1 trans-04 js-name-b2 p-b-6">
+                <a href="" class="stext-104 cl4 hov-cl1 trans-04 js-name-b2 p-b-6">
                     Classic Trench Coat
                 </a>
 
@@ -936,7 +936,7 @@
 
         <div class="block2-txt flex-w flex-t p-t-14">
             <div class="block2-txt-child1 flex-col-l">
-                <a href="product-detail.html" class="stext-104 cl4 hov-cl1 trans-04 js-name-b2 p-b-6">
+                <a href="" class="stext-104 cl4 hov-cl1 trans-04 js-name-b2 p-b-6">
                     Front Pocket Jumper
                 </a>
 
@@ -971,7 +971,7 @@
 
         <div class="block2-txt flex-w flex-t p-t-14">
             <div class="block2-txt-child1 flex-col-l">
-                <a href="product-detail.html" class="stext-104 cl4 hov-cl1 trans-04 js-name-b2 p-b-6">
+                <a href="" class="stext-104 cl4 hov-cl1 trans-04 js-name-b2 p-b-6">
                     Vintage Inspired Classic 
                 </a>
 
@@ -1006,7 +1006,7 @@
 
         <div class="block2-txt flex-w flex-t p-t-14">
             <div class="block2-txt-child1 flex-col-l">
-                <a href="product-detail.html" class="stext-104 cl4 hov-cl1 trans-04 js-name-b2 p-b-6">
+                <a href="" class="stext-104 cl4 hov-cl1 trans-04 js-name-b2 p-b-6">
                     Shirt in Stretch Cotton
                 </a>
 
@@ -1041,7 +1041,7 @@
 
         <div class="block2-txt flex-w flex-t p-t-14">
             <div class="block2-txt-child1 flex-col-l">
-                <a href="product-detail.html" class="stext-104 cl4 hov-cl1 trans-04 js-name-b2 p-b-6">
+                <a href="" class="stext-104 cl4 hov-cl1 trans-04 js-name-b2 p-b-6">
                     Pieces Metallic Printed
                 </a>
 
