--- a/myproject/authentication/templates/accounts/signup.html
+++ b/myproject/authentication/templates/accounts/signup.html
@@ -36,7 +36,7 @@
 
         .login-image {
             width: 50%;
-            background-image: url("{% static 'authentication/images/2.jpg' %}");
+            background-image: url("{% static 'images/1.jpg' %}");
             background-size: cover;
             background-position: center;
             border-top-left-radius: 12px;
